--- a/patient-appointment-api.yml
+++ b/patient-appointment-api.yml
@@ -112,8 +112,16 @@ paths:
         \ for processing that as much information as possible is supplied.\n\n## Early\
         \ Access\n\nNote, this API is still in early access and is subject to change.\
         \ \n \n## Overview\nSubmits a panel of patients for batch processing of medication\
-        \ history information.\n\n**Note** there may be times when information submitted\
-        \ is truncated for processing due to downstream system requirements.\n"
+        \ history information.\n\n## Special Validations\n1. Patient names must have\
+        \ two or more name components that each have two or more characters\n1. Patient\
+        \ address city must be either empty or two or more characters\n1. Patient\
+        \ address state must be either empty or two or more characters\n\n## Special\
+        \ Processing Rules\n1. Data may be truncated when submitted for downstream\
+        \ system processing based on third-party requirements\n1. Only ASCII values\
+        \ 32-126 are allowed for downstream processing; all accented characters will\
+        \ be replaced with non-accented characters\n\n**Note** there may be times\
+        \ when information submitted is truncated for processing due to downstream\
+        \ system requirements.\n"
       operationId: processMedicationHistoryPatientPanel
       requestBody:
         content:
@@ -590,7 +598,7 @@ components:
           default: false
         womens:
           type: boolean
-          description: "Women's Health diagnostic information is desired for the patient"
+          description: Women's Health diagnostic information is desired for the patient
           example: false
           default: false
       description: Diagnostic categories of interest regarding the patient
@@ -799,11 +807,10 @@ components:
               type: string
               nullable: true
     MedHistoryPatientPanel:
-      required:
-        - medHistoryPatientRecords
       type: object
       properties:
         medHistoryPatientRecords:
+          maxItems: 5000
           minItems: 1
           type: array
           items:
