--- a/patient-appointment-api.yml
+++ b/patient-appointment-api.yml
@@ -7,7 +7,7 @@ info:
     name: Connective Health Tech Support
     url: https://connectivehealth.io
     email: techsupport@connectivehealth.io
-  version: 1.14.0
+  version: 1.15.0
 servers:
   - url: https://processing-request-staging.connectivehealth.io/
     description: Customer testing site. Test data only. No PHI.
@@ -661,6 +661,13 @@ components:
           description: Diagnostic categories of interest regarding the patient
           allOf:
             - $ref: "#/components/schemas/DiagnosticCategories"
+        medicationsOfInterest:
+          type: array
+          description: Medications of interest regarding the patient. Include MedicationRequest
+            details if known. These may be displayed on documents to direct the reader's
+            attention.
+          items:
+            $ref: "#/components/schemas/Medication"
       description: Directives which may influence how the data is processed
     Dosage:
       type: object
