PS-1442, PS-1477, PS-1478: Hematological, Infectious, and Pain disease templates

--- a/patient-appointment-api.yml
+++ b/patient-appointment-api.yml
@@ -646,7 +646,7 @@ components:
           default: false
         pain:
           type: boolean
-          description: Pain-related diagnostic information is desired for the patient
+          description: Chronic pain-related diagnostic information is desired for the patient
           example: false
           default: false
         renal:
